--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@datacamp/waffles": "~1.17.0",
     "@datacamp/waffles-tokens": "^1.0.4",
     "@lezer/highlight": "^1.1.3",
+    "@axe-core": "4.10.2",
     "lodash.debounce": "^4.0.8",
     "node-gyp": "^9.1.0"
   },
