--- a/.github/workflows/dep-review.yml
+++ b/.github/workflows/dep-review.yml
@@ -12,3 +12,10 @@ jobs:
        uses: actions/checkout@v4
      - name: Dependency Review
        uses: actions/dependency-review-action@v4
+       with:
+        # Possible values: "critical", "high", "moderate", "low"
+         fail-on-severity: critical        
+        # You can only include one of these two options: `allow-licenses` and `deny-licenses`
+        # ([String]). Only allow these licenses (optional)
+        # Possible values: Any SPDX-compliant license identifiers or expressions from https://spdx.org/licenses/
+         allow-licenses: ISC, MIT, MPL-2.0
